# Agent-Remote-Bridge

./: .gitignore  CHANGELOG.md  CLIENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICKSTART.md  README.en.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  client_compatibility.yml  config.yml  docs_improvement.yml  feature_request.yml  security_concern.yml
.github/workflows/: ci.yml  release.yml
config/: README.md  hosts.example.yaml
docs/: ROADMAP.md  验收场景与发布门槛.md
scripts/: check_docs.py  release_gate.py  run_server.ps1  setup_codex_mcp.ps1  smoke_test.py
src/agent_remote_bridge/: __init__.py  main.py  server.py  settings.py
src/agent_remote_bridge/adapters/: __init__.py  base.py  ssh_adapter.py
src/agent_remote_bridge/models/: __init__.py  audit.py  host.py  policy.py  result.py  session.py
src/agent_remote_bridge/services/: audit_service.py  command_service.py  facts_service.py  file_service.py  host_service.py  network_service.py  process_service.py  security_guard.py  session_manager.py  system_service.py
src/agent_remote_bridge/stores/: audit_store.py  host_store.py  session_store.py
src/agent_remote_bridge/utils/: errors.py  remote_path.py  shell_quote.py  suggested_actions.py  truncation.py
tests/e2e/: test_release_gate_script.py
tests/integration/: test_server_registration.py
tests/unit/: test_audit_service.py  test_audit_store.py  test_check_docs_script.py  test_file_service_writes.py  test_host_service.py  test_host_store.py  test_main_cli_contract.py  test_main_session_cli.py  test_remote_path.py  test_removed_top_level_doc_references.py  test_response_envelope.py  test_security_guard.py  test_session_manager.py  test_session_store.py  test_smoke_test_script.py  test_ssh_adapter.py  test_suggested_actions.py  test_system_network_semantics.py  test_tool_response_contract.py
