[project]
name = "agent-remote-bridge"
version = "0.2.0"
description = "A controlled SSH-backed MCP server that lets local coding agents work against remote Linux hosts."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Agent Remote Bridge" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]
keywords = [
  "mcp",
  "model-context-protocol",
  "ssh",
  "remote-execution",
  "agent",
  "coding-agent",
]
urls = { Homepage = "https://github.com/itkdm/Agent-Remote-Bridge", Repository = "https://github.com/itkdm/Agent-Remote-Bridge", Issues = "https://github.com/itkdm/Agent-Remote-Bridge/issues", Documentation = "https://github.com/itkdm/Agent-Remote-Bridge#readme" }
dependencies = [
  "fastmcp>=2.12.0",
  "paramiko>=3.4.0",
  "pydantic>=2.12.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=9.0.0",
  "twine>=6.1.0",
]

[project.scripts]
agent-remote-bridge = "agent_remote_bridge.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
